# seizure_detection_pipeline

./: Dockerfile  Makefile  README.md  make_all_rr_intervals.sh  pyproject.toml
data/dataset/sample_ecg_inclusion/: ecg.01-006.csv
data/sample_ecg_inclusion/: ecg.01-006.csv
docker/python3.9/: Dockerfile
src/domain/: qrs_detector.py
src/usecase/: compute_hrvanalysis_features.py  detect_qrs.py  utilities.py
