[project]
name = "seizure-detection-pipeline"
version = "1.0.0"
requires-python = "~=3.9.0"

dependencies = [
    "airflow-provider-great-expectations==0.0.7",
    "biosppy==0.7.3",
    "click==8.0.1",
    "ecg-qc==1.0b5",
    "great-expectations==0.13.25",
    "hrv-analysis==1.0.4",
    "mlflow==1.23.1",
    "numpy==1.19.5",
    "pandas==1.1.5",
    "seaborn==0.11.2",
    #"psycopg2-binary==2.8.6",
    "py-ecg-detectors==1.0.2",
    "pyEDFlib==0.1.22",
    "SQLAlchemy==1.3.24",
    "wfdb==3.4.0",
]

[project.optional-dependencies]
dev = [
    "flake8==3.9.2",
    "flake8-docstrings==1.6.0",
    "pytest==6.2.4",
    "pytest-cov==3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 