[project]
name = "seizure-detection-pipeline"
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "hrv-analysis>=1.0.5",
    "py-ecg-detectors==1.0.2",
    "wfdb",
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "scipy>=1.10.0",
    "biosppy==0.7.3",
    "pyarrow>=19.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8==3.9.2",
    "flake8-docstrings==1.6.0",
    "pytest==6.2.4",
    "pytest-cov==3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 
